--- a/Hari/styles/form.css
+++ b/Hari/styles/form.css
@@ -58,3 +58,21 @@ form input[type="text"]:focus, form input[type="password"]:focus {
 .custom-button:hover {
     background-color: #d6d6d6; /* Slightly darker gray for hover */
 }
+
+/* Style for the register success label */
+.register-success {
+    color: green;
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    margin-left: 50px;
+}
+
+/* Style for the register failed label */
+.register-failed {
+    color: red;
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    margin-left: 70px;
+}
