--- a/Hari/styles/form.css
+++ b/Hari/styles/form.css
@@ -76,3 +76,12 @@ form input[type="text"]:focus, form input[type="password"]:focus {
     margin-bottom: 10px;
     margin-left: 70px;
 }
+
+/* Style for the login failed label */
+.login-failed {
+    color: red;
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    margin-left: 40px;
+}
