--- a/Hari/styles/nav.css
+++ b/Hari/styles/nav.css
@@ -1,23 +1,55 @@
-/* Style the overall nav bar */
-nav {
+* {
+    box-sizing: border-box;
+    font-weight: normal;
+    font-style: normal;
+    font-family: 'Arial';
+}
+
+.header-wrapper, content{
+    width: 100%;
+}
+
+/************ Header Style ***************/
+.header-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 10px 100px;
+    width: 100%;
+    min-width: 560px;
+    background-color: white;
+    z-index: 999;
 }
 
-/* Style the Logo */
-.nav-logo {
-    flex: 1;
+.logo-wrapper img {
+    width: 100px;
+    height: 100px;
 }
 
-/* Style the right links */
-.nav-links {
+.nav-wrapper {
     display: flex;
-    gap: 30px;
+    align-items: center;
 }
 
-.nav-links a {
-    text-decoration: none; /* Removes the underline */
+.headerItem {
+    font-family: 'Arial';
+    margin-right: 30px;
+    font-weight: 500;
+    font-size: 18px;
+    text-decoration: none;
     color: black;
+}
+
+.search-wrapper, .cart-wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.searchBtn, .cartBtn {
+    cursor: pointer;
+    margin-right: 30px;
+}
+
+.fas {
+    font-size: 20px;
 }
