cart, wishlist edit made

--- a/styles/ordercompleted.css
+++ b/styles/ordercompleted.css
@@ -12,6 +12,19 @@ body {
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+.items-list {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.item-details {
+    border: 1px solid #ddd;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
 
 h1, h2, h3 {
     margin: 0 0 10px;
