--- a/styles/Itemlist.css
+++ b/styles/Itemlist.css
@@ -8,6 +8,19 @@
   width: 100%;   
 }
 
+.page-title {
+    font-family: 'Arial';
+    font-weight: 500;
+    font-size: 30px;
+    color: black;
+}
+
+.divider {
+    width: 100%;
+    border: 0.8px solid #f4f4f4;
+    margin: 20px 0;
+}
+
 /* Category List */
 .category-wrapper {
   width: 100%;
@@ -26,7 +39,7 @@
 .content {
     display: flex;
     box-sizing: border-box;
-    padding: 3rem 2.5rem;
+    padding: 0rem 2.5rem;
     align-items: flex-start;   /* Align content and filter to flex-start */
     justify-content: flex-start; /* Ensure the content starts from the left */
     width: 100%;
